ex13 List.of() -> Arrays.asList()